Tests/PySwiftASTTests/Resources/syntax_errors/invalid_indentation.py
# Invalid indentation
def foo():
    x = 1
   y = 2  # Wrong indentation level
    return x + y
